app/core/static/core/countlist.css
input[name*='part_number'] {
    width: auto;
    height: 24px;
    background-color: transparent;
    border: none;
}

input[name*='part_description'] {
    width: 240px;
    height: 24px;
    background-color: transparent;
    border: none;
}

input[name*='expected_quantity'] {
    width: 84px;
    height: 24px;
    background-color: transparent;
    border: none;
}

input[name*='counted_date'] {
    width: 90px;
    height: 24px;
    background-color: transparent;
    border: none;  
}

td {
    width: auto;
}

input[id*='variance'] {
    width: 84px;
    height: 24px;
    background-color: transparent;
    border: none;
    text-align: right;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    display: none; 
}

input[name*='counted_quantity'] {
    width: 64px;
    height: 24px;
}

#searchDiv {
    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
    width: auto;
    padding: 30px;
}

#addBlendButtonContainer{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 10px;
}

#accordionContainer {
    display: flex;
    align-items: center;
    justify-content: center;
}

.accordion-item { 
    width: 50vw;
}

.ui-autocomplete { 
    position: absolute; 
    cursor: default; 
    z-index: 9999 !important;
}

.discardButton {
    border: 1px solid red;
    border-radius: 3px;
    padding: 6px;
    color: red;
    margin-left: 5px;
    text-decoration: none; 
}

.discardButton:hover {
    background-color: red;
    color: white;
}

.buttonContainer { 
    display: flex;
    justify-content: center;
    align-items: center;
}

.missingCount { 
    background: lightcoral;
}


@media print {
    .site-header {
        display: none !important;
    }

    .contentarea {
        margin-top: -80px;
        border: none;
    }

    input[name*='counted_quantity'] {
        opacity: 0;
    }

    .buttonContainer {
        display: none !important;
    }

    td {
        border: solid 1px black;
    }

    tr {
        border: solid 1px black;
    }
}

